--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <title>index</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <script type="text/javascript" src="index.js"></script>
-    <base target="_blank">
-</head>
-<body>
-/home/nemsys/projects/www/wwwcourses.github.io/ProgressBG-MySQL/index.html WORKS : )
-</body>
-</html>
+pages/agenda/beginners.html
