--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -30,11 +30,15 @@
     <span class="btn_hide"  onclick="hideAllNodes( document.getElementsByClassName('iep_syllabus_sub_themes'))">Скрий подтемите</span> )</span>
     </h4>
     <ol class="iep_syllabus_themes">
-        <li id="Course_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/Course_Intro/Course_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Въведение в курса</span><span class="hours">2</span></h3>
+        <li id="CourseIntro"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/CourseIntro/CourseIntro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Въведение в курса</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes start">
                 <li>Представяне на курса.</li>
-                <li>Запознаване със необходимия софтуер за създаване и управление на RDBS</li>
-                <li>Накратко за SQL и базите дани </li>
+                <li>Инсталиране и запознаване с необходимия софтуер за създаване и управление на RDBS.</li>
+                <li>Инсталиране на MySQL Server.</li>
+                <li>Инсталиране на MySQL Client.</li>
+                <li>Инсталиране на MySQL Workbench.</li>
+                <li>Инсталиране на PHP.</li>
+                <li>Инсталиране на SublimeText 3.</li>
             </ol>
         </li>
         <li id="Course_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/Course_Intro/Course_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Въведение в базите данни и SQL</span><span class="hours">2</span></h3>
@@ -42,7 +46,7 @@
                 <li>Основни понятия от релационни бази данни.</li>
                 <li>Структура на  релационни бази данни – RDBS.</li>
                 <li>Таблици в RDBS.</li>
-                <li>Видове връзки между таблици</li>
+                <li>Видове връзки между таблици.</li>
             </ol>
         </li>
         <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Основни синтактични правила на MySQL.Типове данни в MySQL.</span><span class="hours">4</span></h3>
