--- a/pages/themes/beginners/CourseIntro/CourseIntro.html
+++ b/pages/themes/beginners/CourseIntro/CourseIntro.html
@@ -137,7 +137,6 @@
         <i class="material-icons img">live_help</i>
     </section>
 </section>
-
 <section><h2>Какво е необходимо за курса</h2>
     <section><h3>MySQL - server, client</h3>
         <dl class="fa">
@@ -302,6 +301,10 @@ phpinfo();
             <li>Отворете барузера и въведете следния адрес: <code>http://localhost:8080/phpinfo.php</code></li>
         </ol>
     </section>
+</section>
+<section>
+    <h1>Знания и опит ще споделя с вас Ива Е. Попова</h1>
+    <a href="https://bg.linkedin.com/in/ivapopova"><i class="fa fa-linkedin img"></i></a>
 </section>
 <section data-background="/ProgressBG-MySQL/outfit/images/for_slides/the_end_on_sand.jpg">
     <!-- <img class="the_end" src="/ProgressBG-MySQL/outfit/images/for_slides/the_end_on_sand.jpg"> -->
