--- a/pages/agenda/beginners.html
+++ b/pages/agenda/beginners.html
@@ -10,17 +10,15 @@
     <link rel="stylesheet" type="text/css" href="/ProgressBG-MySQL/outfit/css/master.css">
     <link rel="stylesheet" type="text/css" href="/ProgressBG-MySQL/outfit/css/agenda.css">
     <style type="text/css">
-        .iep_syllabus_themes .hours::after{
-            content: ' ч.';
-        }
+        .total_hours_value::after{ content: ' ч.'}
     </style>
     <base target="_blank">
 </head>
 <body class="background_gradient_left_right">
 <header>
-    <h2>MySQL</h2>
-    <h3><a href="/index.html">MySQL Course</a></h3>
-    <h4>Fundamentals</h4>
+        <h2>RDBMS, SQL</h2>
+        <h3><a href="../../../index.html">MySQL Course</a></h3>
+        <h4>Agenda</h4>
 </header>
 <article class="iep_course_about">
 </article>
@@ -33,7 +31,7 @@
         <li id="CourseIntro"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/CourseIntro/CourseIntro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Въведение в курса</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes start">
                 <li>Представяне на курса.</li>
-                <li>Инсталиране и запознаване с необходимия софтуер за създаване и управление на RDBS.</li>
+                <li>Инсталиране и запознаване с необходимия софтуер за създаване и управление на RDBMS.</li>
                 <li>Инсталиране на MySQL Server.</li>
                 <li>Инсталиране на MySQL Client.</li>
                 <li>Инсталиране на MySQL Workbench.</li>
@@ -41,75 +39,75 @@
                 <li>Инсталиране на SublimeText 3.</li>
             </ol>
         </li>
-        <li id="Course_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/Course_Intro/Course_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Въведение в базите данни и SQL</span><span class="hours">2</span></h3>
+        <li id="DB_SQL_Intro"><h3><a class="active" href="/ProgressBG-MySQL/pages/themes/beginners/DB_SQL_Intro/DB_SQL_Intro.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Въведение в базите данни и SQL</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes start">
                 <li>Основни понятия от релационни бази данни.</li>
-                <li>Структура на  релационни бази данни – RDBS.</li>
-                <li>Таблици в RDBS.</li>
+                <li>Структура на  релационни бази данни – RDBMS.</li>
+                <li>Таблици в RDBMS.</li>
                 <li>Видове връзки между таблици.</li>
             </ol>
         </li>
-        <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Основни синтактични правила на MySQL.Типове данни в MySQL.</span><span class="hours">4</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Основни синтактични правила на MySQL.Типове данни в MySQL.</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down"> Основни команди в MySQL за създаване, обновяване  и изтриване на таблици в MySQL.(create table,  update, drop table)</span><span class="hours">2</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down"> Основни команди в MySQL за създаване, обновяване  и изтриване на таблици в MySQL.(create table,  update, drop table)</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Ограничаване на стойностите на данните в таблиците на RDBS посредством първичен ключ (primary key),външен ключ  (foreign key) и връзка между отделните таблици</span><span class="hours">2</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Ограничаване на стойностите на данните в таблиците на RDBMS посредством първичен ключ (primary key),външен ключ  (foreign key) и връзка между отделните таблици</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Команди за въвеждане, изтриване, обновяване на данни в таблиците в MySQL – (insert, update, delete);</span><span class="hours">4</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Команди за въвеждане, изтриване, обновяване на данни в таблиците в MySQL – (insert, update, delete);</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Извличане на данни от таблици посредством команда (select) и клауза (where)</span><span class="hours">2</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Извличане на данни от таблици посредством команда (select) и клауза (where)</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Използване на агрегатни функции в операторите  на MySQL</span><span class="hours">4</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Използване на агрегатни функции в операторите  на MySQL</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Създаване на заявки посредством операторите на езика MySQL</span><span class="hours">4</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Създаване на заявки посредством операторите на езика MySQL</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Създаване на едновременни заявки до няколко таблици в релационната база от данни. Създаване на съединения в заявките</span><span class="hours">4</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Създаване на едновременни заявки до няколко таблици в релационната база от данни. Създаване на съединения в заявките</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Влагане на заявки една в друга посредством операторите на MySQL</span><span class="hours">4</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Влагане на заявки една в друга посредством операторите на MySQL</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Създаване на под заявки в MySQL</span><span class="hours">2</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Създаване на под заявки в MySQL</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down"> Основни модели за проектиране на релационни бази от данни. Модел “entity-relationship”  (ER)</span><span class="hours">4</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down"> Основни модели за проектиране на релационни бази от данни. Модел “entity-relationship”  (ER)</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Модели за нормализиране на базите от данни. Първа, втора и трета нормални форми на базите от данни</span><span class="hours">2</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Модели за нормализиране на базите от данни. Първа, втора и трета нормални форми на базите от данни</span><span class="hours">2</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
         </li>
-        <li id="RDBS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Вграждане на операторите на езика MySQL в програмен език PHP</span><span class="hours">4</span></h3>
+        <li id="RDBMS_Intro"><h3><a class="nonactive" href="/ProgressBG-MySQL/pages/themes/beginners/HTML_Bases/HTML_Bases.html" title="slides"><i class="fa fa-file-powerpoint-o"></i></a><span class="label arrow_down">Вграждане на операторите на езика MySQL в програмен език PHP</span><span class="hours">4</span></h3>
             <ol class="iep_syllabus_sub_themes">
 
             </ol>
