--- a/pages/themes/beginners/CourseIntro/CourseIntro.html
+++ b/pages/themes/beginners/CourseIntro/CourseIntro.html
@@ -66,7 +66,10 @@
         </div>
     </div>
 </section>
-
+<section>
+    <h1>Знания и опит ще споделя с вас Ива Е. Попова</h1>
+    <a href="https://bg.linkedin.com/in/ivapopova"><i class="fa fa-linkedin img"></i></a>
+</section>
 <section><h2>Цели на курса</h2>
     <section>
         <h3>Какво може</h3>
@@ -76,7 +79,7 @@
     <section>
         <!-- <img src="images/two_dolphin_live.jpg" height="500px" class="fragment shrink"> -->
         <ul class="fa text_center">
-            <li class="text_center">Да обясни по достъпен начин необходимата терминология, така че да се почувствате в свои води при разработването на приложения използващи RDMS и в частност - MySQL.</li>
+            <li class="text_center">Да обясни по достъпен начин необходимата терминология, така че да се почувствате в свои води при разработването на приложения използващи RDBMS и в частност - MySQL.</li>
         </ul>
         <i class="fa fa-life-ring img"></i>
         <i class="icon-database-alt2 img"></i>
@@ -86,7 +89,7 @@
     </section>
     <section>
         <ul class="fa text_center">
-            <li>Интензивни упражнения в часовете, върху реални бизнес примери.</li>
+            <li>Интензивни упражнения в часовете върху реални бизнес примери.</li>
         </ul>
         <i class="material-icons img">group_work</i>
         <i class="ionicons ion-code-working img"></i>
@@ -200,6 +203,18 @@
             </code></pre>
         </dl>
     </section>
+    <section><h3>Стартиране на MySQL Server</h3>
+        <dl class="fa">
+            <dt>Под Windows</dt>
+                <pre><code>C:\> "C:\Program Files\MySQL\MySQL Server 5.6\bin\mysqld"</code></pre>
+            <dt>Под Linux</dt>
+                <pre><code>sudo /etc/init.d/mysql start</code></pre>
+                или
+                <pre><code>sudo service mysql sart</code></pre>
+            <dt>Под OS X</dt>
+                <pre><code>sudo /usr/local/mysql/support-files/mysql.server start</code></pre>
+        </dl>
+    </section>
     <section><h3>Тестване на инсталациите</h3>
         <dl class="fa">Свързване към MySQL сървъра чрез MySQL client
             <dd>Отворете конзолата</dd>
@@ -232,7 +247,7 @@ mysql>
         <ol class="fa">
             <li><a href="https://www.apachelounge.com/download/VC14/binaries/httpd-2.4.18-win64-VC14.zip">Apache Lounge Binaries - 64bit version</a></li>
             <li><a href="https://www.apachelounge.com/download/VC14/binaries/httpd-2.4.18-win32-VC14.zip">Apache Lounge Binaries - 32bit version</a></li>
-            <li>При желание инсталирайте <a href="http://www.microsoft.com/en-us/download/details.aspx?id=48145">Visual C++ for Visual Studio 2015 (VC14)</a></li>
+            <li>Инсталирайте <a href="http://www.microsoft.com/en-us/download/details.aspx?id=48145">Visual C++ for Visual Studio 2015 (VC14)</a></li>
             <li>Разахривирайте Apache binaries (.zip файла) във C:\Apache24</li>
         </ol>
     </section>
@@ -302,10 +317,7 @@ phpinfo();
         </ol>
     </section>
 </section>
-<section>
-    <h1>Знания и опит ще споделя с вас Ива Е. Попова</h1>
-    <a href="https://bg.linkedin.com/in/ivapopova"><i class="fa fa-linkedin img"></i></a>
-</section>
+
 <section data-background="/ProgressBG-MySQL/outfit/images/for_slides/the_end_on_sand.jpg">
     <!-- <img class="the_end" src="/ProgressBG-MySQL/outfit/images/for_slides/the_end_on_sand.jpg"> -->
 </section>
