--- a/pages/themes/beginners/CourseIntro/CourseIntro.html
+++ b/pages/themes/beginners/CourseIntro/CourseIntro.html
@@ -75,7 +75,8 @@
     </div>
 </section>
 <section>
-    <h1>Знания и опит ще споделя с вас Ива Е. Попова</h1>
+    <h5>Знания и опит ще споделя с вас</h5>
+    <h4>Ива Е. Попова</h4>
     <a href="https://bg.linkedin.com/in/ivapopova"><i class="fa fa-linkedin img"></i></a>
 </section>
 <section><h2>Цели на курса</h2>
