--- a/pages/themes/beginners/CourseIntro/CourseIntro.html
+++ b/pages/themes/beginners/CourseIntro/CourseIntro.html
@@ -152,10 +152,11 @@
 <section><h2>Какво е необходимо за курса</h2>
     <section><h3>MySQL - server, client</h3>
         <dl class="fa">
-            <dt>Инсталиране на MySQL 5.7 (последна стабилна версия към 014.03.2016)</dt>
-                <dd>Windows: <a href="https://dev.mysql.com/downloads/windows/">MySQL on Windows</a></dd>
+            <dt>Инсталиране на MySQL 5.7 (последна стабилна версия към 14.03.2016)</dt>
+                <dd>Сваляне за всички версии: <a href="http://dev.mysql.com/downloads/mysql/">Download MySQL Community Server</a></dd>
+                <dd>Инструкции за Windows: <a href="http://dev.mysql.com/doc/refman/5.7/en/windows-installation.html">Installing MySQL on Microsoft Windows</a></dd>
                 <dd>Linux: <a href="https://dev.mysql.com/downloads/repo/apt/">Download MySQL APT Repository</a>
-                    <p>Изпълнете следните команди:</p>
+                    <p style="font-size: 0.7em; padding-left: 1em">След това изпълнете следните команди:</p>
                     <pre><code class="bash">
     ### add -s option for simulation of the instalation:
 
@@ -164,13 +165,12 @@
     > sudo apt-get install mysql-workbench-community
                     </code></pre>
                 </dd>
-                <dd>Apple OS X: <a href="https://dev.mysql.com/doc/refman/5.7/en/osx-installation.html">Installing MySQL on OS X</a></dd>
+                <dd>Инструкции за Apple OS X: <a href="https://dev.mysql.com/doc/refman/5.7/en/osx-installation-pkg.html">Installing MySQL on OS X Using Native Packages</a></dd>
         </dl>
     </section>
     <section><h3>MySQL Workbench</h3>
-        <p>В случай, че след инсталацията на пакета mysql,нямате инсталиран MySQL Workbench:</p>
+        <p>В случай, че след инсталацията на пакета mysql, нямате инсталиран MySQL Workbench:</p>
         <dl class="fa">
-            <dt>Инсталиране на MySQL Workbench 6.3.6 (последна стабилна версия към 014.03.2016)</dt>
             <dd><a href="http://dev.mysql.com/downloads/workbench/">Download MySQL Workbench</a></dd>
             <dd>Изберете от падащото меню ('Select Platform') желаната от вас палтформа и следвайте инструкциите.</dd>
         </dl>
