--- a/pages/themes/beginners/DB_SQL_Intro/DB_SQL_Intro.html
+++ b/pages/themes/beginners/DB_SQL_Intro/DB_SQL_Intro.html
@@ -79,7 +79,6 @@
 
 <section><h2>Introduction to DB</h2>
     <section>
-        <a href="#" onclick="document.getElementById('theme').setAttribute('href','/ProgressBG-MySQL/lib/reveal.js/css/theme/league.css'); return false;">League</a>
         <dl class="fa">
             <dt>Definition:</dt>
                 <dd><abbr>DB</abbr><dfn id="DB"><span>Data</span><span>Base</span></dfn></dd>
@@ -89,24 +88,30 @@
                 <dd>A DB should be used for more than one task.</dd>
         </dl>
     </section>
-    <section>
-        <p>Historical Milestones</p>
+    <section><p>DB Historical Milestones</p>
         <dl class="fa">
             <dt>Early 1960s - <span class="name_product">Integrated Data Store</span> (<span class="name_person">Charles Bachman</span>, <span class="name_company">General Electric</span>)</dt>
             <dt>Late 1960s - <span class="name_product">Information Management System</span> (<span class="name_company">IBM</span>)</dt>
                 <dd>forms the bases of the <i>hierarchical data model</i></dd>
             <dt>In 1970 - <span class="name_person">Edgar Codd</span> at <span class="name_company">IBM</span> proposes the <span class="keyconcept">relational data model</span></dt>
             <dt>In 1980s - the <span class="keyconcept">SQL</span> was developed as part of <span class="name_company">IBM</span>’s <span class="name_product">System R</span> project.</dt>
-            <dt>In 1994 - the <span class="keyconcept">MySQL</span> first internal release, created by <span class="name_person">Michael Widenius</span> and <span class="name_person">David Axmark</span></dt>
+        </dl>
+    </section>
+    <section><p>MySQL Historical Milestones</p>
+        <dl class="fa">
+            <dt>1994 - the <span class="keyconcept">MySQL</span> first internal release, created by <span class="name_person">Michael Widenius</span> and <span class="name_person">David Axmark</span></dt>
+            <dt>1995 - <span class="name_company">MySQL AB</span> company is founded, by the creators of <span class="keyconcept">MySQL</span> DB.</dt>
+            <dt>2008 - <span class="name_company">Sun Microsystems</span> acquires <span class="name_company">MySQL AB</span> for approximately 1 billion dollars.</dt>
+            <dt>2010 - <span class="name_company">Oracle Corporation</span> acquires <span class="name_company">Sun Microsystems</span> and thus - <span class="name_company">MySQL AB</span>.</dt>
         </dl>
     </section>
     <section>
-        <p>DB Evolution</p>
+        <p>DB Evolution.</p>
         <dl class="fa">
             <dt class="keyconcept">Data warehouse</dt>
                 <dd>Logical collection of information gathered from operational databases.</dd>
                 <dd>Supports business analysis activities and decision making tasks.</dd>
-            <dt class="keyconcept">Data mart.</dt>
+            <dt class="keyconcept">Data mart</dt>
                 <dd>Subset of a data warehouse in which only a focused portion of the data warehouse information is kept.</dd>
             <dt class="keyconcept">Ontologies</dt>
                 <dd>Conceptual representation of world that consists of a set of types, properties, and relationship types.</dd>
@@ -123,7 +128,6 @@
         </dl>
     </section>
 </section>
-
 <section><h2>Data Models</h2>
     <section><h3>Definition</h3>
         <p>A <span class="keyconcept">data model</span> is a collection of high-level data description constructs that hide many low-level storage details.</p>
@@ -161,25 +165,49 @@
             <dt><span class="keyconcept">Relation schema</span> - describes the column heads for the table.</dt>
         </dl>
     </section>
+    <section><h3>Popular Relationship Database Management System (RDBMS)</h3>
+        <dl class="fa">
+            <dt>Commercial:</dt>
+                <dd>Oracle, Microsoft SQL Server, SAP SyBase</dd>
+            <dt>Free (under GPL)</dt>
+                <dd>MySQL, PostgreSQL, SQLite</dd>
+        </dl>
+    </section>
     <section>
         <dl class="fa"><h3>Key Concepts</h3>
             <dt><span class="keyconcept">Relational DataBase</span></dt>
                 <dd>A collection of <span class="keyconcept">tables</span>, with related data.</dd>
             <dt><span class="keyconcept">Tables</span> - represents a <span class="keyconcept">Relation</span>.</dt>
-                <dd>Consists of rows and columns, like a simple spreadsheet.</dd>
-                <dd>Each table is a set of <span class="note">unique</span> rows.</dd>
+                <dd><span class="keyconcept">Table</span> and <span class="keyconcept">relations</span> are synonymous in DB context.</dd>
+                <dd>A <span class="keyconcept">relation</span> is different from <span class="keyconcept">relationship</span>.</dd>
+                <dd>A <span class="keyconcept">table</span> consists of <span class="keyconcept">rows</span> and <span class="keyconcept">columns</span>, like a simple spreadsheet.</dd>
+                <dd>Each <span class="keyconcept">table</span> is a set of <span class="note">unique</span> <span class="keyconcept">rows</span>.</dd>
             <dt><span class="keyconcept">Row</span> (Tuple, Record)</dt>
-                <dd>Represents a collection of related values of entity.</dd>
-            <dt><span class="keyconcept">Column</span> </dt>
+                <dd>Represents a collection of related values (characteristic) of an entity.</dd>
+            <dt><span class="keyconcept">Column</span> (field)</dt>
                 <dd>One column contains data of one and the same type, as defined in schema.</dd>
         </dl>
     </section>
+    <section><h3>Example Table</h3>
+        <img src="images/ExampleDatabase_DescTable.png">
+    </section>
     <section><h3>ExampleDatabase</h3>
-        <dl>
+        <img src="images/ExampleDatabase_ShowTables.png">
+    </section>
+    <section><h3>ExampleDatabase</h3>
+        <dl class="fa">
             <dt>Download</dt>
                 <dd><a href="https://github.com/datacharmer/test_db">Employees Sample Database</a></dd>
-            <dt>Install</dt>
-                <dd><code>mysql -u root -p < employees.sql</code></dd>
+            <dt>Install (CLI)</dt>
+                <pre><code>
+    mysql -u root -p < employees.sql
+                </code></pre>
+            <dt>Install (MySQL Workbench)</dt>
+                <dd>File => Run SQL Script... => <i>Navigate and select 'employees.sql'</i></dd>
+                <dd>Leave empty field for 'Default Schema Name' and 'Default Character Set'</dd>
+                <dd>Press 'Run' and wait the script to executes and load all data.</dd>
+                <dd>Refresh the 'SCHEMAS' panel.</dd>
+            </dd>
         </dl>
     </section>
 </section>
