Slides transition change

--- a/pages/themes/beginners/DB_SQL_Intro/DB_SQL_Intro.html
+++ b/pages/themes/beginners/DB_SQL_Intro/DB_SQL_Intro.html
@@ -241,7 +241,7 @@
             // minScale: .5,
             maxScale: 1,
             // slide transition
-            transition: 'concave', // none/fade/slide/convex/concave/zoom
+            transition: 'slide', // none/fade/slide/convex/concave/zoom
             // Factor of the display size that should remain empty around the content
             margin: 0.1,
             // shift+maous click to zoom in/out element
