DB_SQL_Intro: Tables relationships

--- a/pages/themes/beginners/DB_SQL_Intro/DB_SQL_Intro.html
+++ b/pages/themes/beginners/DB_SQL_Intro/DB_SQL_Intro.html
@@ -188,6 +188,18 @@
                 <dd>One column contains data of one and the same type, as defined in schema.</dd>
         </dl>
     </section>
+    <section><h3>Tables Relationships</h3>
+        <dl class="fa">
+            <dt class="keyconcept">One to one relationship</dt>
+                <dd>Example: Customer -> Address</dd>
+            <dt class="keyconcept">One to Many/Many to One relationship</dt>
+                <dd>Example: Customer -> Orders</dd>
+            <dt class="keyconcept">Many to Many relationship</dt>
+                <dd>Examples: Orders -> Items</dd>
+            <dt class="keyconcept">Self Referencing relationship</dt>
+                <dd>Customer -> Customer (like in referral program)</dd>
+        </dl>
+    </section>
     <section><h3>Example Table</h3>
         <img src="images/ExampleDatabase_DescTable.png">
     </section>
